# python-safe-REPL

./: CHANGELOG.md  README.md  pyproject.toml  python-safe-REPL.code-workspace  safe_repl.py  test_import_feature.py
.github/: copilot-instructions.md
respy_repl/: __init__.py  __main__.py  cli.py  engine.py  exceptions.py  imports.py  imports_policy_tables.py  policy.py  policy_tables.py  repl_command_registry.py  session.py
safe_repl/: AST_DEFS.py  __init__.py  __main__.py  cli.py  engine.py  execution.py  imports.py  imports_policy_tables.py  policy.py  policy_tables.py  process_control.py  process_isolation.py  process_protocol.py  process_worker.py  repl_command_registry.py  sandbox.py  session.py  subprocess_runtime.py  validator.py  worker_session.py
tests/: test_cli.py  test_cli_integration.py  test_doctest_repl_command_registry.py  test_imports_proxy.py  test_isolation.py  test_process_control.py  test_process_protocol.py  test_respy.py  test_safe_repl.py  test_security_api.py
tools/: bench_security.py  bench_validator.py  memory_limit_probe.py  test_import_feature.py
