[tool.poetry]
name = "safe-repl"
version = "0.8.1"
description = "Safe REPL with tiered permission levels for restricted Python execution"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
	{ include = "respy_repl" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cloudpickle = "^3.1.1"
RestrictedPython = ">=7.4"

[tool.poetry.scripts]
respy-repl = "respy_repl:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^1.3.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
